--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,3 @@
-# This GitHub action publishes assets for a release when a tag is created.
-# It's configured to trigger on tags that match the pattern "v*" (e.g., v0.1.0).
-
-# We use the 'crazy-max/ghaction-import-gpg' action for GPG key handling.
-# Ensure your private key and passphrase are set in the `GPG_PRIVATE_KEY` and `PASSPHRASE` secrets, respectively.
-
-# For GoReleaser, ensure it is configured correctly for non-interactive mode as necessary.
-# This setup is streamlined for simplicity and efficiency in automating the release process.
-
 name: release
 
 on:
@@ -25,7 +16,7 @@ jobs:
         run: git fetch --prune --unshallow
 
       - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
           go-version: '^1.21.5'
 
@@ -36,11 +27,22 @@ jobs:
           gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
 
+      - name: Extract Tag Name
+        run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+
+      - name: Extract Release Notes
+        run: |
+          VERSION=$(echo $VERSION | sed 's/^v//')
+          RELEASE_NOTES=$(awk -v version="$VERSION" '$0 ~ "^## \\[" version "\\] - " {printIt=1;next} /^## \[/ {printIt=0} printIt {print}' CHANGELOG.md)
+          echo "RELEASE_NOTES<<EOF" >> $GITHUB_ENV
+          echo "$RELEASE_NOTES" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
+
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
         with:
           version: latest
-          args: release --clean
+          args: release --release-notes=${{ env.RELEASE_NOTES }}
         env:
           GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
