ignore second pycache directory

--- a/.gitignore
+++ b/.gitignore
@@ -67,4 +67,5 @@ override.tf.json
 terraform.rc
 terraform
 
-importer-script/functions/__pycache__/*
+importer-script/functions/__pycache__
+importer-script/__pycache__
